Bug 112163 - FILEOPEN: Crash with Application Error when opening file with particular table and pagelayout
Summary: FILEOPEN: Crash with Application Error when opening file with particular tabl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.3.5.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:6.0.0 target:5.4.2 target:5.3.7
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2017-09-01 17:43 UTC by Dinh Le
Modified: 2017-09-07 14:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
crashes with application error (6.87 KB, application/vnd.oasis.opendocument.text)
2017-09-01 17:44 UTC, Dinh Le
Details
backtrace (76.66 KB, text/plain)
2017-09-01 17:47 UTC, Dinh Le
Details
bt with debug symbols (39.47 KB, text/plain)
2017-09-01 20:30 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinh Le 2017-09-01 17:43:40 UTC
Description:
Opening the file leads to a crash with  Application Error

Tested it on 
version 5.3.5.2 and 
daily build 
master~2017-08-31_23.06.56_LibreOfficeDev_6.0.0.0.alpha0_Linux_x86-64_deb

OS Ubuntu 16.04.2 LTS


Steps to Reproduce:
1.Open the file

Actual Results:  
Crashes with application error

Expected Results:
not crashing, either opening or getting parsing error


Reproducible: Always

User Profile Reset: No

Additional Info:
The file is still quite big but is already pruned of unnecessary stuff.


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36
Comment 1 Dinh Le 2017-09-01 17:44:16 UTC
Created attachment 135935 [details]
crashes with application error
Comment 2 Dinh Le 2017-09-01 17:47:58 UTC
Created attachment 135936 [details]
backtrace
Comment 3 Xisco Faulí 2017-09-01 18:14:39 UTC
The document is displayed but it crashes after a few seconds....

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 4 Julien Nabet 2017-09-01 20:30:17 UTC
Created attachment 135944 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached bt + some gdb session.
It seems the root cause must be searched from there:
warn:legacy.osl:9190:1:sw/source/core/text/itrtxt.cxx:40: No paragraph
Comment 5 Commit Notification 2017-09-07 09:13:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6c8c51231e7415ecc20d1343211acf8382666613

tdf#112163 sw: avoid crashing in layout on this document

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2017-09-07 09:20:57 UTC
it crashes since commit "5d9d0f3c979732ade57b9c4c4960dd030ffdc9f9
"there is a function for that: CalcLineSpace(xx, bEvenIfNoLine)"
which confused me for a bit; contrary to the commit message
the "m_bBorderDist" variable was not always true at the
time when it was pushed to master, but it because always
true in a separate patch from the same author shortly thereafter.

however that was a deliberate change in the layout that
just changed the size of padding so the crash is definitely
not an error in that commit.

fixed on master
Comment 7 Commit Notification 2017-09-07 14:48:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7629c51d6793a4c5f31200b2cbbb75ed9074ee6c&h=libreoffice-5-4

tdf#112163 sw: avoid crashing in layout on this document

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2017-09-07 14:48:29 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8e84ac201f5611635177f8404c28f7fa8d0c806&h=libreoffice-5-3

tdf#112163 sw: avoid crashing in layout on this document

It will be available in 5.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.