Resolves: tdf#112163 survive unfetchable paragraph layout

Change-Id: I4675ac74df9f82ae5fc396804acf87831e74e074